# rdma-core

./: CMakeLists.txt
libibverbs/: cmd.c
librdmacm/: CMakeLists.txt  cma.c  indexer.c  librspreload.map  manage_recursive.c  manage_recursive.h  preload.c  rsocket.c
librdmacm/examples/: CMakeLists.txt
samplejava/: SimpleHadoop.java  SimpleHadoop.sh
scripts/: check_out.sh
tcpip_cli_srv/: CMakeLists.txt  tcpip_client.c  tcpip_client_loop.c  tcpip_server.c  tcpip_server_loop.c  udpip_listener.c  udpip_listener_r.c  udpip_talker.c  udpip_talker_r.c
tcpip_cli_srv_java/: DateClient.java  DateClientLoop.java  DateClientLoopThread.java  DateServerLoop.java  DateServerLoopThread.java
